--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ openai
 langchain
 langchain-openai
 langchain-community
+langchain-chroma
+langchain-text-splitters
 chromadb
 pypdf
 pysqlite3-binary
